--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "expo": "~49.0.5",
+    "expo-camera": "^13.4.2",
+    "expo-image-picker": "^14.3.2",
+    "expo-media-library": "^15.4.1",
     "expo-status-bar": "~1.6.0",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-native": "0.72.3"
   },
