--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.4.1",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "expo": "~49.0.5",
@@ -19,7 +20,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-maps": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
