--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-maps": "^1.7.1"
+    "react-native-maps": "^1.7.1",
+    "sqlite-storage": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
