--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.4.1",
+    "@react-native-community/datetimepicker": "7.2.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "expo": "~49.0.5",
-    "expo-camera": "^13.4.2",
+    "expo-camera": "~13.4.2",
     "expo-image-picker": "^14.3.2",
     "expo-media-library": "^15.4.1",
+    "expo-sqlite": "^11.3.2",
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.3",
     "react-native-maps": "^1.7.1",
+    "react-native-web": "^0.19.7",
     "sqlite-storage": "^1.0.1"
   },
   "devDependencies": {
