--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-camera-roll/camera-roll": "^5.7.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "axios": "^1.4.0",
+    "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
-    "expo": "~49.0.5",
+    "expo": "^49.0.6",
     "expo-camera": "~13.4.2",
+    "expo-constants": "^14.4.2",
+    "expo-image-manipulator": "^11.3.0",
     "expo-image-picker": "^14.3.2",
+    "expo-location": "^16.1.0",
     "expo-media-library": "^15.4.1",
     "expo-sqlite": "^11.3.2",
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "pexels": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.3",
+    "react-native-elements": "^3.4.3",
     "react-native-maps": "^1.7.1",
+    "react-native-paper": "^5.9.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-web": "^0.19.7",
     "sqlite-storage": "^1.0.1"
   },
