--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
+    "react-native-flip-card": "^3.5.7",
     "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.6.3",
