--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "expo": "^49.0.6",
     "expo-camera": "~13.4.2",
+    "expo-cli": "^6.3.10",
     "expo-constants": "^14.4.2",
     "expo-image-manipulator": "^11.3.0",
     "expo-image-picker": "^14.3.2",
